--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Experimenting with streams using Node",
   "main": "beebboop.js",
   "dependencies": {
+    "concat-stream": "^1.5.1",
     "split": "^1.0.0",
     "through2": "^2.0.0"
   },
