completed HTML streams adventure

--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "beebboop.js",
   "dependencies": {
     "concat-stream": "^1.5.1",
+    "duplexer2": "^0.1.2",
     "install": "^0.2.4",
     "request": "^2.40.0",
     "split": "^1.0.0",
+    "through": "^2.3.8",
     "through2": "^2.0.0",
     "trumpet": "^1.7.2",
     "websocket-stream": "^2.0.2"
