--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "request": "^2.40.0",
     "split": "^1.0.0",
     "stream": "0.0.2",
+    "stream-combiner": "^0.2.2",
     "through": "^2.3.8",
     "through2": "^2.0.0",
     "trumpet": "^1.7.2",
