--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
-node_modules
-npm-debug.lognode_modules/
+envs
+node_modules/
+build/Release
+.npm
+.node_repl_history
+*.xls
+*.csv
+*.json
+.awspublish*
+logs
+*.log
+*.pid
+*.seed
+.DS_Store
+lib
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+/eshell/history
+/eshell/lastdir
+.tern-port
